TestSuite/errors/err0122.pas
uses GraphABC;
type TRec = record
a : integer;
b : (red, green, blue);
end;

var 
s : TRec := (a:2;b:'aaa');
begin
end.